# 5xcamp

./: .gitignore  README.md  bank.py  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
core/: settings.py  urls.py
cores/: models.py  urls.py  views.py
cores/migrations/: 0001_initial.py  0002_alter_bank_url.py
src/: input.js  script.js
static/: output.js  style.css
staticfiles/: style.css
templates/: index.html
